        - Threading support.
            - Parallel checking for ASCII.
            - Parallel string matching.
            - Autodetect number of HW-threads.
            - Disabled by default.
        - Highlight multiple selected rows (#287,#293)
        - Dmenu can read from file instead of stdin.
        - Regex matching (#113)
        - Take Screenshot of rofi using keybinding.
    Improvements:
		- Fix return code of multi-select.
        - Update manpage (#289, #291)
        - Improve speed of reading stdin in dmenu mode.
        - Correctly handle modifier keys now. Should now support most weird keyboard layouts and switching between them.
        (#268, #265, #286)
        - Correctly set locale, fixing issues with entering special characters. (#282)
        - DRun mode support `NoDisplay` setting (#283)
        - Pango markup is matched when filtering. (#273)
    Bug fixes:
        - Improve error message (#290)
        - Correctly switch to next entry on multi-select when list is filtered (#292)
        - Switch __FUNCTION__ for __func__. (#288)
        - Fix segfault on empty list and moving through it. (#256,#275)
        - Fix one off of colors (#269)
        - Drun fix uninitialized memory (#285)

0.15.11:
    New features:
        - (Experimental) Desktop file support
    Improvement:
        - Add xdg-terminal to rofi-sensible-terminal
    Bug fixes:
        - manpage fixes (#261)
        - Crash in error mesg on invalid config
        - Fix urgent and active being activated at same time
        - Fix crasher on empty list
0.15.10:
    New feature:
        - Support for Startup Notification
        - Standalone mode in dmenu
        - ssh: known_hosts parsing
        - Full screen support
        - Glob style matching
        - Cairo drawing
        - Fast ascii filtering (thx to Tom Hinton)
        - Combi bang support
        - normal window mode for dmenu
        - Startup notification support
        - Current desktop window mode