@@ -1300,6 +1300,9 @@ The first two fields specify the alpha level\. This determines the amount of tra
 \fBgrave\fR: Toggle case sensitivity\.
 .
 .IP "\(bu" 4
+\fBAlt\-grave\fR: Toggle levenshtein sorting\.
+.
+.IP "\(bu" 4
 \fBAlt\-Shift\-S\fR: Take a screenshot and store this in the Pictures directory\.
 .
 .IP "" 0
